# content-queue

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  CRATE_DESIGN_PLAN_BRAINSTORM.md  IMPLEMENTATION_PLAN.md  INTERVIEW_PREP.md  README.md  ROADMAP.md  TESTING.md  TESTING_CONNECTIONS.md  build-extension.sh  docker-compose.yml  shelf-mockup.html  verify_extraction_metadata.py
content-queue-backend/: .env.example  .gitignore  .pre-commit-config.yaml  Procfile  README.md  nixpacks.celery.toml  nixpacks.celery.toml.backup  nixpacks.toml  pip.conf  pyproject.toml  start-celery.sh  start.sh  verify_extraction.py
content-queue-backend/.github/: copilot-instructions.md
content-queue-backend/alembic/: env.py
content-queue-backend/alembic/versions/: 001_add_auto_tags_column.py  002_add_reading_patterns.py  003_add_embedding_to_highlights.py  004_add_cascade_delete_to_highlights.py  005_add_vinyl_columns.py  006_add_videos_column.py  007_add_status_column.py  0618711d3113_add_cascade_delete_to_highlights_user_fk.py  18e333bfc270_add_tags_to_content_items.py  1a2b3c4d5e6f_add_highlights.py  2f3g4h5i6j7k_add_index_on_read_position.py  43acce7f6578_initial_schema_with_users_content_items_.py  4e5abe77d033_refactor_is_academic_to_vertical_.py  (+7 more)
content-queue-backend/app/: main.py
content-queue-backend/scripts/: cleanup_orphaned_highlights.py  embed_highlights.py
content-queue-backend/tests/: conftest.py  test_analytics_api.py  test_auth_api.py  test_content_api.py  test_content_extended.py  test_extraction_utils.py  test_highlights_api.py  test_lists_api.py  test_rate_limiter.py  test_vinyl_api.py
pdf/: README.md
(+163 files in other folders)
