[project]
name = "content-queue-backend"
version = "0.1.0"
description = "Content Queue API"
authors = [
    {name = "enpuyou",email = "enpuyou@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn[standard] (>=0.40.0,<0.41.0)",
    "sqlalchemy (>=2.0.45,<3.0.0)",
    "psycopg[binary] (>=3.2.3,<4.0.0)",
    "alembic (>=1.18.0,<2.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "python-multipart (>=0.0.21,<0.0.22)",
    "celery (>=5.6.2,<6.0.0)",
    "redis (>=7.1.0,<8.0.0)",
    "pgvector (>=0.4.2,<0.5.0)",
    "openai (>=2.15.0,<3.0.0)",
    "newspaper3k (>=0.2.8,<0.3.0)",
    "trafilatura (>=2.0.0,<3.0.0)",
    "yt-dlp (>=2025.12.8,<2026.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "email-validator (>=2.3.0,<3.0.0)",
    "bcrypt (==4.0.1)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "lxml (>=6.0.2,<7.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "slowapi (>=0.1.9) ; python_version >= \"3.11\" and python_version < \"4.0\""
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = ">=9.0.2,<10.0.0"
pytest-asyncio = ">=1.3.0,<2.0.0"
httpx = ">=0.28.1,<0.29.0"
black = ">=25.12.0,<26.0.0"
ruff = ">=0.14.11,<0.15.0"
pre-commit = ">=4.5.1,<5.0.0"
psycopg2-binary = "^2.9.11"
